gcc/testsuite/g++.old-deja/g++.other/lineno4.C
// { dg-do assemble  }

#define x \
  y

int; // { dg-error "" } invalid declaration

